fix: fix 3 bugs in SettingsLanguage header and sub-items
- Add .icon_language CSS class to settings banner mask icons section
  so the language icon appears in the Language sub-page gradient header
- Fix language-code-overlay text color: use #ffffff instead of
  --color-grey-90 which was nearly invisible in light mode on the
  blue subsetting_icon background
- Fix missing translation [T:settings.interface.description]: rename
  YAML key from interface.description to description so it compiles to
  settings.interface.description (not the doubled
  settings.interface.interface.description path)

--- a/frontend/packages/ui/src/styles/icons.css
+++ b/frontend/packages/ui/src/styles/icons.css
@@ -2032,6 +2032,17 @@ div.clickable-icon {
   mask-position: center;
 }
 
+.icon_language {
+  -webkit-mask-image: url("@openmates/ui/static/icons/language.svg");
+  mask-image: url("@openmates/ui/static/icons/language.svg");
+  -webkit-mask-size: contain;
+  mask-size: contain;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+}
+
 .icon_developers {
   -webkit-mask-image: url("@openmates/ui/static/icons/coding.svg");
   mask-image: url("@openmates/ui/static/icons/coding.svg");
